atualizei footer com horarios de funcionamentos

--- a/index.html
+++ b/index.html
@@ -832,8 +832,13 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">GeocafCont</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-          <div class="social-links d-flex mt-4">
+          **Horário de Funcionamento – Geocaf Contabilidade Digital**  
+
+          Atendemos de **segunda a sexta-feira**:  
+          ⏰ **Manhã:** das **8h às 11h**  
+          ⏰ **Tarde:** das **13h30 às 17h45**  
+          
+          Estamos à disposição para oferecer as melhores soluções contábeis e digitais para você! Entre em contato. 😊          <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/geocafcont"><i class="bi bi-instagram"></i></a>
